<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:id="@+id/loginCardView"
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_margin="10dp"
            android:layout_width="@dimen/card_width"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            card_view:cardCornerRadius="3dp"
            card_view:cardElevation="2dp"
            card_view:cardPreventCornerOverlap="true"
            card_view:cardUseCompatPadding="true"
            card_view:contentPadding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/userEmailLyt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/userEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email_hint"
                        android:inputType="textEmailAddress"
                        android:imeOptions="flagNavigateNext"
                        android:maxLines="1"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/userPwdLyt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/userPwd"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password_hint"
                        android:inputType="textPassword"
                        android:imeOptions="actionDone"
                        android:maxLines="1"/>

                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/loginBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/selector_login_btn"
                    android:paddingBottom="10dp"
                    android:paddingLeft="18dp"
                    android:clipChildren="false"
                    android:paddingRight="18dp"
                    android:paddingTop="10dp"
                    android:textAllCaps="true"
                    android:text="@string/login"
                    android:textColor="@color/colorWhite"
                    android:textSize="16sp"
                    android:enabled="false"/>

            </LinearLayout>

    </android.support.v7.widget.CardView>

    </RelativeLayout>

</ScrollView>